@@ -1,45 +1,48 @@
 package com.davidgracia.euclideantsp.solvers;
 
-import com.davidgracia.euclideantsp._2DPoint;
-import org.locationtech.jts.geom.*;
+import org.locationtech.jts.geom.Coordinate;
+import org.locationtech.jts.geom.GeometryFactory;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class Tour {
-    private final List<_2DPoint> points;
+    private final List<Coordinate> coordinates;
     private static final double NOT_CALCULATED_YET = -1;
     private double distance;
 
-    public Tour(_2DPoint firstPoint, _2DPoint... otherPoints) {
-        List<_2DPoint> tempPoints = new ArrayList<>();
-        tempPoints.add(firstPoint);
-        tempPoints.addAll(Arrays.asList(otherPoints));
-        points = Collections.unmodifiableList(tempPoints);
+    public Tour(Coordinate coordinate, Coordinate... otherCoordinates) {
+        List<Coordinate> tempCoordinates = new ArrayList<>();
+        tempCoordinates.add(coordinate);
+        tempCoordinates.addAll(Arrays.asList(otherCoordinates));
+        coordinates = Collections.unmodifiableList(tempCoordinates);
         distance = NOT_CALCULATED_YET;
     }
 
-    public Tour(_2DPoint[] points) {
-        this.points = List.of(points);
+    public Tour(Coordinate[] coordinates) {
+        this.coordinates = List.of(coordinates);
+        distance = NOT_CALCULATED_YET;
+    }
+
+    public Tour(List<Coordinate> listOfConnectedCoordinates) {
+        coordinates = Collections.unmodifiableList(listOfConnectedCoordinates);
         distance = NOT_CALCULATED_YET;
     }
 
     public double getDistance() {
-        return distance == NOT_CALCULATED_YET ? distance = calculateDistance(this.points) : distance;
+        return distance == NOT_CALCULATED_YET ? distance = calculateDistance(this.coordinates) : distance;
     }
 
-    private double calculateDistance(List<_2DPoint> _2DPoints) {
+    private double calculateDistance(List<Coordinate> coordinates) {
         double distance = 0;
-        List<Point> points = _2DPoints.stream().map(PointMapper::toPoint).collect(Collectors.toUnmodifiableList());
-        for (int i = 0; i < points.size() - 1; i++) {
-            distance += points.get(i).distance(points.get(i + 1));
+        for (int i = 0; i < coordinates.size() - 1; i++) {
+            distance += coordinates.get(i).distance(coordinates.get(i + 1));
         }
-        distance += points.get(points.size() - 1).distance(points.get(0));
+        distance += coordinates.get(coordinates.size() - 1).distance(coordinates.get(0));
         return distance;
     }
 
-    public List<_2DPoint> getPoints() {
-        return points;
+    public List<Coordinate> getCoordinates() {
+        return coordinates;
     }
 
     @Override
@@ -50,13 +53,13 @@ public class Tour {
 
         boolean areEquals = false;
         int i = 0;
-        List<_2DPoint> tempPoints = Arrays.asList(new _2DPoint[points.size()]);
-        Collections.copy(tempPoints, otherTour.points);
-        while (i < points.size() && !areEquals) {
+        List<Coordinate> tempPoints = Arrays.asList(new Coordinate[coordinates.size()]);
+        Collections.copy(tempPoints, otherTour.coordinates);
+        while (i < coordinates.size() && !areEquals) {
             Collections.rotate(tempPoints, 1);
-            areEquals = Objects.equals(points, tempPoints);
+            areEquals = Objects.equals(coordinates, tempPoints);
             Collections.reverse(tempPoints);
-            areEquals = areEquals || Objects.equals(points, tempPoints);
+            areEquals = areEquals || Objects.equals(coordinates, tempPoints);
             Collections.reverse(tempPoints);
             i++;
         }
@@ -66,11 +69,21 @@ public class Tour {
     @Override
     public int hashCode() {
         //TODO
-        return Objects.hash(points);
+        return Objects.hash(coordinates);
     }
 
     @Override
     public String toString() {
-        return "Tour{" + points + ", d=" + getDistance() + "}";
+        return "Tour{" + coordinates + ", d=" + getDistance() + "}";
+    }
+
+    public void insertPathAtCheapestPosition(List<Coordinate> coordinates) {
+        GeometryFactory f = new GeometryFactory();
+        //
+        double minimumDistance = Double.POSITIVE_INFINITY;
+        for (int i = 0; i < this.coordinates.size() - 1; i++) {
+//            Coordinate firstConnectedCoordinate = CoordinateMapper.toCoordinate(this.coordinates.get(i));
+            //double distance = firstConnectedCoordinate.distance()
+        }
     }
 }
